--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -3,8 +3,7 @@
     <div class="offcanvas-body">
         <nav class="nav fixed-top p-2">
             <div class="container-fluid">
-                <a href="/"><img src="favicon.svg" height="20rem"></a>
-                <small class="fw-light" style="color: #ff9500;">&nbsp;aes.framework 1.0.alpha</small>
+                <a href="/framework"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></a>
             </div>
         </nav>
     </div>
