--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,19 +1,14 @@
 <nav class="nav p-2" style="background-color: black; opacity: .75; border-top: 1px solid #ff9500;">
     <div class="container-fluid">
         <a data-bs-toggle="offcanvas" href="#aes-help-dock" role="button" aria-controls="aes-help-dock"
-            id="a-aes-help"><img src="favicon.svg" height="20rem">
-            <small class="fw-light" style="color: #ff9500;">&nbsp;aes.framework 1.0.alpha</small></a>
+            id="a-aes-help"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem">
     </div>
 </nav>
 <nav class="navbar navbar-expand fixed-bottom"
     style="background-color: black; opacity: .75; border-bottom: 1px solid #ff9500;">
     <div class="container-fluid">
         <div>
-            <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
-        </div>
-        <div class="px-2">
-            <a href="/"><img src="assets/images/arte-e-software-cubo.svg"
-                    style="padding-left: .65rem; width: 8.97rem !important" /></a>
+            <a class="btn btn-success" href="/framework"><img src="favicon.svg" height="25rem;" ></a>
         </div>
         <div class="container-fluid">
             <ul class="nav nav-tabs" id="nav-bar" role="tablist">
